# ARX_X5

ARX_CAN/: arx_can.rules
ROS/X5_ws/src/arx_msg_ros/arm_control/: CMakeLists.txt
ROS/X5_ws/src/arx_r5_ros/arx_r5_controller/: CMakeLists.txt
ROS/X5_ws/src/arx_r5_ros/arx_r5_controller/include/arx_r5_controller/: R5Controller.hpp
ROS/X5_ws/src/arx_r5_ros/arx_r5_controller/launch/: open_aloha.launch  open_aloha_old.launch  open_double_arm.launch  open_double_arm_old.launch  open_keyboard_control.launch  open_remote_master.launch  open_remote_slave.launch  open_single_arm.launch  open_single_arm_old.launch  open_vr_double_arm.launch  open_vr_double_arm_old.launch  open_vr_single_arm.launch
ROS/X5_ws/src/arx_r5_ros/arx_r5_controller/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfaceTools.hpp  InterfacesPy.hpp
ROS/X5_ws/src/arx_r5_ros/arx_r5_controller/src/: KeyBoard.cpp  R5Controller.cpp
ROS/X5_ws/src/arx_x5_ros/arx_x5_controller/: CMakeLists.txt  package.xml
ROS/X5_ws/src/arx_x5_ros/arx_x5_controller/include/arx_x5_controller/: KeyBoard.hpp  X5Controller.hpp  X5ControllerVr.hpp
ROS/X5_ws/src/arx_x5_ros/arx_x5_controller/launch/: open_aloha.launch  open_aloha_old.launch  open_double_arm.launch  open_double_arm_old.launch  open_keyboard_control.launch  open_remote_master.launch  open_remote_slave.launch  open_single_arm.launch  open_single_arm_old.launch  open_vr_double_arm.launch  open_vr_single_arm.launch
ROS/X5_ws/src/arx_x5_ros/arx_x5_controller/lib/arx_hardware_interface/include/arx_hardware_interface/can_motor_dlc/: Mtp1Dlc.hpp  Mtp2Dlc.hpp  Mtp3Dlc.hpp  Mtp4Dlc.hpp
ROS/X5_ws/src/arx_x5_ros/arx_x5_controller/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesThread.hpp
ROS/X5_ws/src/arx_x5_ros/arx_x5_controller/src/: KeyBoard.cpp  X5Controller.cpp  X5ControllerVr.cpp
ROS/X5_ws/src/arx_x5_ros/arx_x5_msg/: CMakeLists.txt  package.xml
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/: CMakeLists.txt  package.xml
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/config/: aloha_arm.yaml
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/include/arx_x5_controller/: KeyBoard.hpp  X5Controller.hpp  X5ControllerVr.hpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/launch/: open_aloha_master.launch.py  open_aloha_slave.launch.py
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/lib/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesPy.hpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/src/: KeyBoard.cpp  X5Controller.cpp  X5ControllerVr.cpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_msg/: CMakeLists.txt  package.xml
ROS2/X5_ws/src/arx_x5_ros2/tools/: R5.sh  arx.sh  can.sh  key.sh  topic_rqt.sh
py/arx_x5_python/: .gitignore  setup.sh  test_single_arm.py
py/arx_x5_python/bimanual/: CMakeLists.txt
py/arx_x5_python/bimanual/api/arx_x5_src/include/arx_x5_src/interfaces/: InterfacesPy.hpp
py/arx_x5_python/bimanual/script/: single_arm.py  x5.urdf
py/arx_x5_python/bimanual/src/: single_arm_interface.cpp
